yaml/loadgen.yaml
apiVersion: v1
kind: Pod
metadata:
  name: loadgen
  labels:
    app: loadgen
spec:
  containers:
  - image: sjunell1643407/loadgen:latest
    name: loadgen
  restartPolicy: Always
