yaml/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: guestbook
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/kidk/kubernetes-demo-apps-frontend:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        livenessProbe:
         httpGet:
           path: /healthz
           port: 3000
         initialDelaySeconds: 30
         periodSeconds: 5
         failureThreshold: 1 # For demo purposes
        ports:
          - containerPort: 3000
