yaml/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guestbook-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-svc
spec:
  hosts:
  - "*"
  gateways:
  - guestbook-gateway
  http:
  - name: "frontend-route"
    route:
    - destination:
        host: frontend.demo.svc.cluster.local
        port:
          number: 3000
